# customer/customer-service/src/view/create-customer/create-customer.controller.ts
@@ -1,0 +1,4 @@
+import { Controller } from '@nestjs/common';
+
+@Controller('create-customer')
+export class CreateCustomerController {}
