# customer/dev-tools/code-gen/gen/create-customer.controller.ts
@@ -1,0 +1,7 @@
+import { Controller } from '@nestjs/common';
+
+/**
+ * 顧客登録コントローラー
+ */
+@Controller('create-customer')
+export class Controller {}
